--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WawingoBros</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 32 32%22><text y=%220.9em%22 font-size=%2226%22>🍄</text></svg>">
+
     <script src="phaser.min.js"></script>
     <script type="module" src="game.js"></script>
     <style>
